--- a/src/index.css
+++ b/src/index.css
@@ -4,51 +4,61 @@
 
 @layer base {
   :root {
-    --background: 215 51% 98%;
-    --foreground: 215 55% 4%;
-    --muted: 185 33% 86%;
-    --muted-foreground: 185 2% 39%;
-    --popover: 215 51% 98%;
-    --popover-foreground: 215 55% 4%;
-    --card: 215 51% 98%;
-    --card-foreground: 215 55% 4%;
-    --border: 215 11% 89%;
-    --input: 215 11% 89%;
-    --primary: 215 52% 56%;
-    --primary-foreground: 0 0% 100%;
-    --secondary: 185 52% 56%;
-    --secondary-foreground: 0 0% 0%;
-    --accent: 245 52% 56%;
-    --accent-foreground: 0 0% 100%;
-    --destructive: 13 97% 25%;
-    --destructive-foreground: 13 97% 85%;
-    --ring: 215 52% 56%;
-    --radius: 0.5rem;
+  --background: 210 20% 98%;
+  --foreground: 210 30% 10%;
+  --card: 210 20% 95%;
+  --card-foreground: 210 30% 10%;
+  --popover: 210 20% 95%;
+  --popover-foreground: 210 30% 10%;
+  --primary: 210 90% 50%;
+  --primary-foreground: 0 0% 100%;
+  --secondary: 25 100% 50%;
+  --secondary-foreground: 0 0% 100%;
+  --muted: 210 10% 85%;
+  --muted-foreground: 210 30% 10%;
+  --accent: 30 100% 50%;
+  --accent-foreground: 0 0% 100%;
+  --destructive: 0 100% 50%;
+  --destructive-foreground: 0 0% 100%;
+  --border: 210 20% 90%;
+  --input: 210 20% 95%;
+  --ring: 210 80% 40%;
+  --chart1: 210 80% 50%;
+  --chart2: 30 100% 50%;
+  --chart3: 25 60% 50%;
+  --chart4: 210 70% 50%;
+  --chart5: 150 60% 50%;
+
+    --radius: 0.3rem;
   }
 
   .dark {
-    --background: 215 59% 2%;
-    --foreground: 215 20% 100%;
-    --muted: 185 33% 14%;
-    --muted-foreground: 185 2% 61%;
-    --popover: 215 59% 2%;
-    --popover-foreground: 215 20% 100%;
-    --card: 215 59% 2%;
-    --card-foreground: 215 20% 100%;
-    --border: 215 11% 11%;
-    --input: 215 11% 11%;
-    --primary: 215 52% 56%;
-    --primary-foreground: 0 0% 100%;
-    --secondary: 185 52% 56%;
-    --secondary-foreground: 0 0% 0%;
-    --accent: 245 52% 56%;
-    --accent-foreground: 0 0% 100%;
-    --destructive: 13 97% 46%;
-    --destructive-foreground: 0 0% 100%;
-    --ring: 215 52% 56%;
+  --background: 210 30% 15%;
+  --foreground: 210 80% 90%;
+  --card: 210 30% 20%;
+  --card-foreground: 210 80% 90%;
+  --popover: 210 30% 20%;
+  --popover-foreground: 210 80% 90%;
+  --primary: 210 90% 60%;
+  --primary-foreground: 0 0% 100%;
+  --secondary: 30 100% 70%;
+  --secondary-foreground: 210 30% 10%;
+  --muted: 210 30% 25%;
+  --muted-foreground: 210 80% 90%;
+  --accent: 30 100% 70%;
+  --accent-foreground: 210 30% 10%;
+  --destructive: 0 100% 60%;
+  --destructive-foreground: 0 0% 100%;
+  --border: 210 30% 20%;
+  --input: 210 30% 25%;
+  --ring: 210 80% 60%;
+  --chart1: 210 80% 70%;
+  --chart2: 30 100% 90%;
+  --chart3: 25 70% 70%;
+  --chart4: 220 80% 70%;
+  --chart5: 150 70% 70%;
   }
 }
-
 
 @layer base {
   * {
